--- a/src/Button/Button.css
+++ b/src/Button/Button.css
@@ -1,16 +1,20 @@
 
 .button-div{
     width: 100%;
+   
 }
   
 
 .buttons {
 
     position: relative;
+    border-radius: 6px;
     padding: 0;
     margin: 0;
     width: 100%;
-    background-color: #ddd;
+    background-color:var(--clr-bg-alt);
+    padding-top: 20px;
+   
    
   }
   
@@ -20,21 +24,19 @@
     font-weight: 600;
     position: relative;
     display: inline-block;
-    width: 74px;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    height: 50px;
+    width: 64px;
+    height: 64px;
    left: 0;
    right: 0;
-    
+   border: none;
     font-size: 20px;
     line-height: 25px;
     box-sizing: border-box;
-    background: #61655B; 
-    color: #ffffff;
-    margin-bottom: 40px;
-    margin-left: 20px;
+    background: none;
+    color: var(--clr-fg);
+    margin-bottom: 20px;
+    margin-left: 30px;
     margin-right: 0;
-    text-shadow: 0 1px rgba(255,255,255,0.2), 0 -1px rgba(0,0,0,0.8);
   }
   
   .buttons > button:after {
@@ -49,32 +51,30 @@
     top: 48px;
     overflow: hidden;
     opacity: 0.4;
-    box-shadow: inset 0 20px 8px -10px rgba(93, 80, 51, 0.6);
     right: -1px;
     left: -1px;
     height: 20px;
     background: transparent;
+    border: none;
+    outline: none;
   }
   
   .buttons > button:focus { outline:0; }
   
   .buttons > button.ac-ce {
-    background: #FA4C07; 
-    color: #ffffff;
-    text-shadow: 0 1px rgba(255,255,255,0.2), 0 -1px rgba(242, 45, 34, 0.8);
+    background: none; 
+    color: var(--clr-fg);
 
-    box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.1), inset 0 -3px 1px 0 rgb(208, 33, 24), inset 0 -5px 10px 2px rgba(164, 27, 21, 0.5), inset 0 4px 6px 0 rgba(255,255,255,0.1), 0 -1px 0px 2px #CCC4B2, 0 1px 0px 2px rgba(255,255,255,0.7);
 
   }
   button.ac-ce i{ font-size: 22px;}
   
   .buttons > button.zero { width: 64px; }
   
-  .buttons > button.hidden { display: none; }
   
   .buttons > button.equal {
     color: #ffffff;
-    background: #61655B; 
+    background: #ff6531; 
     
     
   }
@@ -102,6 +102,14 @@
     display: none;
   }
 
+
+
+  button.operator{
+    background-color: #e5e5e5;
+    border-radius: 50%;
+    color: #18212a;
+    font-size: 25px;
+  }
 
 
   @media (max-width:992px){
