--- a/src/CalculatorDiv/Calculator.css
+++ b/src/CalculatorDiv/Calculator.css
@@ -10,9 +10,13 @@
     height: auto;
     margin: 0 auto;
     padding: 0;
-    background: #fff;
-    border: 1px solid black;
+    background: var(--clr-bg);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
+
+
+
+
 
 
 
