--- a/src/screen/Screen.css
+++ b/src/screen/Screen.css
@@ -6,6 +6,22 @@
     border-radius: 4px;
     filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#8041413e', endColorstr='#ffffff', GradientType=0);
   }
+
+  .screenBase .header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: var(--clr-fg);
+    padding: 30px 20px;
+}
+
+.screenBase .header button{
+     background: none;
+     border: none;
+}
+
+
+
   
   .screen {
 
@@ -14,13 +30,14 @@
     height: 100%;
 
     font-size: 50px;
-    text-align: right;
-    color: rgba(0, 0, 0, 0.7);
+    color: var(--clr-fg);
     text-shadow: 0 4px rgba(0, 0, 0, 0.1);
     line-height: 45px;
-    padding: 4px 10px 0px 0;
+    padding: 100px 10px 0px 0;
     overflow: hidden;
     border: none;
+    display: flex;
+  justify-content: end;
    outline: none;
   }
   
