--- a/src/Button/Button.css
+++ b/src/Button/Button.css
@@ -69,13 +69,18 @@
   }
   button.ac-ce i{ font-size: 22px;}
   
-  .buttons > button.zero { width: 64px; }
+  .buttons > button.zero { 
+    margin-right: 90px;
+  
+  
+  
+  }
   
   
   .buttons > button.equal {
     color: #ffffff;
     background: #ff6531; 
-    
+    border-radius: 50%;
     
   }
   
@@ -88,10 +93,6 @@
 
   }
   
-  .buttons > button.ac-ce:active {
-    box-shadow: inset 0 3px 5px 0 rgba(164,27,21,1), inset 0 5px 10px 2px rgba(164,27,21, 0.5), 0 -1px 0px 2px #CCC4B2, 0 1px 0px 2px rgba(255,255,255,0.7);  
-
-  }
   
   .buttons > button.equal:active {
     box-shadow: inset 0 2px 4px 0 rgba(0, 0, 0, 0.4), inset 0 5px 10px 2px rgba(0, 0, 0, 0.2), 0 -1px 0px 2px #CCC4B2, 0 1px 0px 2px rgba(255,255,255,0.7);
@@ -112,6 +113,9 @@
   }
 
 
-  @media (max-width:992px){
+  @media (max-width:450px){
+    .buttons > button{
+      margin-left: 20px;
+    }
     
   }
