--- a/src/CalculatorDiv/Calculator.css
+++ b/src/CalculatorDiv/Calculator.css
@@ -8,13 +8,19 @@
    right: 0;
     width: 400px;
     height: auto;
-    margin: 0 auto;
-    padding: 0;
+    margin:  0 auto;
+       padding: 0;
     background: var(--clr-bg);
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 
+
+@media (max-width:450px){
+    .calculateWrap{
+       width: 350px;
+    }
+}
 
 
 
